@@ -656,7 +656,9 @@ void ScriptHandler::saveKidokuData()
         return;
     }
 
-    fwrite( kidoku_buffer, 1, script_buffer_length/8, fp );
+    if ( fwrite( kidoku_buffer, 1, script_buffer_length/8, fp ) !=
+         size_t(script_buffer_length/8) )
+        fprintf( stderr, "Warning: failed to write to kidoku.dat\n" );
     fclose( fp );
 }
 
@@ -669,7 +671,11 @@ void ScriptHandler::loadKidokuData()
     memset( kidoku_buffer, 0, script_buffer_length/8 + 1 );
 
     if ( ( fp = fopen( "kidoku.dat", "rb", true ) ) != NULL ){
-        fread( kidoku_buffer, 1, script_buffer_length/8, fp );
+        if (fread( kidoku_buffer, 1, script_buffer_length/8, fp ) !=
+            size_t(script_buffer_length/8)) {
+            if (ferror(fp))
+                fputs("Warning: failed to read kidoku.dat\n", stderr);
+        }
         fclose( fp );
     }
 }
@@ -988,7 +994,8 @@ int ScriptHandler::readScript( DirPaths *path )
 	} while (c != '\r' && c != '\n' && c != EOF);
 	fseek(fp, 0, SEEK_SET);
 	game_identifier = new char[line_size];
-	fgets(game_identifier, line_size, fp);
+	if (fgets(game_identifier, line_size, fp) == NULL)
+            fputs("Warning: couldn't read game ID from game.id\n", stderr);
 	fclose(fp);
     }
     
